Add tab for viewing and responding to reports in mbin.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -124,6 +124,12 @@
   "viewMods": "View Moderators",
   "modPanel": "Mod Panel",
   "ownerPanel": "Owner Panel",
+  "reportStatus_any": "All",
+  "reportStatus_appeal": "Appeal",
+  "reportStatus_approved": "Approved",
+  "reportStatus_closed": "Closed",
+  "reportStatus_pending": "Pending",
+  "reportStatus_rejected": "Rejected",
   "copy": "Copy",
   "copied": "Copied",
   "share": "Share",
