Add tab for viewing and responding to reports in mbin. (#195)
* Add tab for viewing and responding to reports in mbin.

* Add more localised strings.

* Show reported user in ban button.
Hide accept/reject buttons on corresponding status.
Add inkwell to navigate to reported item.
Remove unnecessary ReportStatus values.

* Fix API using 'closed' report status when it should be 'approved'

* Fix report text wrapping, switch report button flex direction based on screen width

---------

Co-authored-by: jwr1 <47087725+jwr1@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -124,6 +124,16 @@
   "viewMods": "View Moderators",
   "modPanel": "Mod Panel",
   "ownerPanel": "Owner Panel",
+  "reportStatus_any": "All",
+  "reportStatus_appeal": "Appeal",
+  "reportStatus_approved": "Approved",
+  "reportStatus_closed": "Closed",
+  "reportStatus_pending": "Pending",
+  "reportStatus_rejected": "Rejected",
+  "report_accept": "Accept",
+  "report_reject": "Reject",
+  "reportedUser": "Reported user: ",
+  "reportedBy": "Reported by: ",
   "copy": "Copy",
   "copied": "Copied",
   "share": "Share",
@@ -358,6 +368,7 @@
       }
     }
   },
+  "status": "Status",
   "reason": "Reason",
   "moderate": "Moderate",
   "submit": "Submit",
