Add page to view logged in users bookmarks.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -594,6 +594,11 @@
   "bookmark": "Bookmark",
   "bookmark_addToX": "Add to {name}",
   "bookmark_removeFromX": "Remove from {name}",
+  "bookmarks": "Bookmarks",
+  "bookmarkLists": "Bookmark Lists",
+  "bookmarkLists_create": "Create list",
+  "bookmarkLists_setDefault": "Set as default",
+  "bookmarkLists_createHint": "New list name",
   "configShare": "Share config",
   "configShare_profile_title": "Interstellar profile",
   "configShare_profile_info": "Modifies {count} settings",
